crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_inline_block_blockquote_messy_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..33
  BLOCK_QUOTE@0..33
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..33
      HTML_BLOCK_TAG@2..9
        TEXT@2..8 "<video"
        TEXT@8..9 ">"
      PLAIN@9..24
        TEXT@9..17 "fallback"
        NEWLINE@17..18 "\n"
        LINE_PREFIX@18..19 ">"
        LINE_PREFIX@19..20 " "
        TEXT@20..24 "more"
      HTML_BLOCK_TAG@24..33
        TEXT@24..32 "</video>"
        NEWLINE@32..33 "\n"
